# StocksMarketRecommender

./: .gitignore  README.md  pyproject.toml
outputs/Berkshire Hathaway_2025_10_26-02_20_38/: investment_decision.json  user_query.txt  work_report.json
outputs/Nvidia_2025_10_26-02_06_02/: investment_decision.json  work_report.json
outputs/Nvidia_2025_10_26-02_09_36/: investment_decision.json  user_query.txt  work_report.json
src/: __init__.py  main.py
src/agentic_stock_analyzer_graph/: __init__.py  graph_manager.py  node_actions.py  prompts.py  routers.py  state.py  structured_outputs.py  tools_setup.py  utils.py
src/market_analyst_graph/: count_tokens.py  graph_manager.py  node_actions.py  prompts.py  state.py  structured_outputs.py  utils.py
src/outputs/: raw.txt  report_MSFT_1002023.md
src/stocks_market_recommender_graph/: __init__.py  graph_manager.py  node_actions.py  prompts.py  routers.py  state.py  structured_outputs.py  utils.py
